src/objects/PossibleDuplicateAccount__c.object
<CustomObject>
    <description>A junction object between two Accounts.</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Possible Duplicate Accounts</relationshipLabel>
        <relationshipName>Possible_Duplicate_Account_Associations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Duplicate_reason__c</fullName>
        <label>Duplicate reason</label>
        <picklist>
            <picklistValues>
                <fullName>Similar Name / Address Fields</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>MOD Intressent Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MOD Modtager Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External provider party ID</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Possible_Duplicate_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Possible Duplicate Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Possible Duplicate Account Associations (Possible Duplicate Account)</relationshipLabel>
        <relationshipName>Possible_Duplicate_Account_Associations1</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Possible Duplicate Account Association</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Account__c</columns>
        <columns>Possible_Duplicate_Account__c</columns>
        <columns>Duplicate_reason__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>DuplicateAccountAssociation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Possible Duplicate Account Associations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>DuplicateReason_is_mandatory</fullName>
        <active>true</active>
        <description>Duplicate Reason is a mandatory field - validation rule to catch API inserts/updates</description>
        <errorConditionFormula>ISBLANK(Duplicate_reason__c) &amp;&amp; $Setup.DisableAutomation__c.Disable_All_Validation_Rules__c = false</errorConditionFormula>
        <errorMessage>Duplicate Reason is a mandatory field on account</errorMessage>
    </validationRules>
</CustomObject>